# movements

./: Cargo.toml  build.rs
data_handler_service/: Cargo.toml  build.rs
data_handler_service/src/: main.rs
publisher_service/proto/: movements.proto
publisher_service/src/: main.rs
src/: main.rs
