[package]
name = "movements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"
zmq = "0.10.0"

[build-dependencies]
tonic-build = "0.10.2"
